chore(backtester): use getLast()
- replace `get(....size() - 1)` with `getLast()`